page basic data

--- a/JS test samples/External JS/index.html
+++ b/JS test samples/External JS/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>JS Test Page</h1>
+    <h3>Open Console to access the logs...</h3>
 
     <script type="text/javascript" src="script.js"></script>
 </body>
