--- a/JS test samples/JS BG generator/index.html
+++ b/JS test samples/JS BG generator/index.html
@@ -8,7 +8,8 @@
 	<h1>Gradient Background Generator</h1>
 	<input class="color1" type="color" name="color1" value="#00ff00">
 	<input class="color2" type="color" name="color2" value="#ff0000">
-	<h2>Current CSS Background</h2>
+	<h2>Current CSS Background, gradient change :)</h2>
+	<h3>Learn to change BG with JS, check JS of this page..</h3>
 	<h3></h3>
 	<script type="text/javascript" src="script.js"></script>
 </body>
