--- a/JS test samples/BG generator/index.html
+++ b/JS test samples/BG generator/index.html
@@ -10,7 +10,7 @@
 	<input class="color2" type="color" name="color2" value="#ff0000">
 	<h2>Current CSS Background, gradient change :)</h2>
 	<h3>Learn to change BG with JS, check JS of this page..</h3>
-	<h3></h3>
+	<h3>Let's speed things up, shall we!</h3>
 	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
